Fixed some z-index nonsense

--- a/gallery/style/gallery.css
+++ b/gallery/style/gallery.css
@@ -95,6 +95,8 @@
 	width: 100%;
 	height: 100%;
 	
+	z-index: 1000;
+	
 	top: 0;
 	left: 0;
 	
